--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "registration_form",
   "version": "0.0.0",
+
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port 5050"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "dependencies": {
     "express": "^4.18.1",
+    "uuid": "^8.3.2",
     "vue": "^3.2.33"
   },
   "devDependencies": {
@@ -17,10 +18,6 @@
   },
   "description": "This template should help get you started developing with Vue 3 in Vite.",
   "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
-  },
   "keywords": [
     "js",
     "rest",
